--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,20 @@
                 </configuration>  
             </plugin>  
         </plugins>  
-    </build>  
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.2.0</version>
+</dependency>
+    </dependencies>
+    
 </project>
 
