--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
         <exec.mainClass>com.mycompany.mavenproject1.Main</exec.mainClass>
         <maven.compiler.release>17</maven.compiler.release>
     </properties>
-        <build>  
+    <build>  
         <plugins>  
             <plugin>  
                 <!-- Build an executable JAR -->  
                 <groupId>org.apache.maven.plugins</groupId>  
                 <artifactId>maven-jar-plugin</artifactId>  
-                <version>3.1.0</version>  
+                <version>3.3.0</version>  
                 <configuration>  
                     <archive>  
                         <manifest>  
@@ -27,18 +27,23 @@
             </plugin>  
         </plugins>  
     </build>
-    <dependencies>
+    <dependencies>   
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
-            <type>pom</type>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.16.1</version>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.2.0</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.16.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+    
     </dependencies>
     <name>StudentManagementSystem</name>
 </project>
